--- a/index.html
+++ b/index.html
@@ -28,11 +28,8 @@
 
       <div class="home-content">
         <h1>Hi Saya <span>Sandy</span></h1>
-        <h3>Saya seorang <span>Mahasiswa</span></h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, quae 
-          in praesentium quaerat eos saepe perferendis magni repellendus. Repellendus 
-          minus magni ab natus doloribus eveniet iure, tempore voluptas eum molestiae vel? 
-          Optio error numquam officia modi ut, praesentium quod alias?</p>
+        <h3>Saya seorang <span>Mahasiswa Universitas Pamulang</span></h3>
+        <p>Saya memiliki beberapa keinginan yang ingin dicapai yaitu sebagai Web Developer, Data Analyst, App Developer</p>
 
           <div class="social-icons">
             <a href="#">
@@ -70,7 +67,7 @@
         <h2>Tentang <span>Saya</span></h2>
         <p>Saya berkuliah di Universitas Pamulang Semester 5 dengan jurusan Teknik Informatika
           saya memiliki basic sebagai web developer karena sewaktu SMK saya mempelajari pelajaran yang berkaitan dengan Website
-          dikelas saya RPL dari kelas 10 sampai 12 dan dilanjut sampai kuliah semester 5
+          dikelas saya RPL dari kelas 10 sampai 12 dan dilanjut sampai kuliah semester 5, saya memiliki kemampuan dalam beberapa bahasa pemrograman <span>HTML, CSS, JAVASCRIPT, PHP, PYTHON, C++, Dan DART</span>
         </p>
           <a href="#" class="btn">Baca Lebih Lanjut</a>
       </div>
