--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="services-container">
 
         <div class="service-box">
-          <img src="asset/gambar/sertifikathtml.jpg" alt="Service Image" class="service-image">
+          <a href="https://www.sololearn.com/certificates/CC-TQ2PQYBL" target="_blank"><img src="asset/gambar/sertifikathtml.jpg" alt="Service Image" class="service-image"></a>
           <!-- <div class="service-info">
             <i class="bx bxs-devices"></i>
             <h4>Mahasiswa Unpam</h4>
@@ -91,7 +91,7 @@
         </div>
 
         <div class="service-box">
-          <img src="asset/gambar/sertifiikatcss.jpg" alt="Service Image" class="service-image">
+          <a href="https://www.sololearn.com/certificates/CC-UFQPIOXH" target="_blank"><img src="asset/gambar/sertifiikatcss.jpg" alt="Service Image" class="service-image"></a>
           <!-- <div class="service-info">
             <i class="bx bx-code"></i>
             <h4>Mahasiswa Unpam</h4>
@@ -103,7 +103,7 @@
         </div>
 
         <div class="service-box">
-          <img src="asset/gambar/sertifikatjs.jpg" alt="Service Image" class="service-image">
+          <a href="https://www.sololearn.com/certificates/CC-WWUEJPCI" target="_blank"><img src="asset/gambar/sertifikatjs.jpg" alt="Service Image" class="service-image"></a>
           <!-- <div class="service-info">
             <i class="bx bx-code-curly"></i>
             <h4>Mahasiswa Unpam</h4>
