--- a/index.html
+++ b/index.html
@@ -114,6 +114,17 @@
           </div> -->
         </div>
         <div class="service-box">
+          <a href="dashmin.html"><img src="asset/gambar/sertifikatjsinter.jpg" alt="Service Image" class="service-image"></a>
+          <!-- <div class="service-info">
+            <i class="bx bx-code"></i>
+            <h4>Mahasiswa Unpam</h4>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, 
+              unde illo. At, corporis aliquam. Doloremque aliquam sint quidem ex, eum 
+              sapiente cum consequuntur impedit accusamus aperiam. Laboriosam, facere 
+              vero aliquam excepturi fuga animi blanditiis!</p>
+          </div> -->
+        </div>
+        <div class="service-box">
           <a href="log.html"><img src="asset/gambar/showlog.png" alt="Service Image" class="service-image"></a>
           <!-- <div class="service-info">
             <i class="bx bxs-devices"></i>
