--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
               vero aliquam excepturi fuga animi blanditiis!</p>
           </div> -->
         </div>
-        <div class="service-box">
-          <a href="dashmin.html"><img src="asset/gambar/sertifikatjsinter.jpg" alt="Service Image" class="service-image"></a>
+         <div class="service-box">
+          <a href="https://www.sololearn.com/certificates/CC-BMCVYKLS" target="_blank"><img src="asset/gambar/sertifikatjsinter.jpg" alt="Service Image" class="service-image"></a>
           <!-- <div class="service-info">
-            <i class="bx bx-code"></i>
+            <i class="bx bx-code-curly"></i>
             <h4>Mahasiswa Unpam</h4>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, 
               unde illo. At, corporis aliquam. Doloremque aliquam sint quidem ex, eum 
