--- a/index.html
+++ b/index.html
@@ -158,6 +158,17 @@
               vero aliquam excepturi fuga animi blanditiis!</p>
           </div> -->
         </div>
+         <div class="service-box">
+          <a href="gameular.html"><img src="asset/gambar/showdash.png" alt="Service Image" class="service-image"></a>
+          <!-- <div class="service-info">
+            <i class="bx bx-code"></i>
+            <h4>Mahasiswa Unpam</h4>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, 
+              unde illo. At, corporis aliquam. Doloremque aliquam sint quidem ex, eum 
+              sapiente cum consequuntur impedit accusamus aperiam. Laboriosam, facere 
+              vero aliquam excepturi fuga animi blanditiis!</p>
+          </div> -->
+        </div>
       </div>
     </section>
 
