--- a/gameular.html
+++ b/gameular.html
@@ -10,8 +10,8 @@
       rel="stylesheet"
     />
     <title>Snake Game</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="asset/css/stylegame.css" />
+    <script src="asset/js/gameular.js" defer></script>
   </head>
   <body>
     <div>
