--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           </div> -->
         </div>
          <div class="service-box">
-          <a href="gameular.html"><img src="asset/gambar/showdash.png" alt="Service Image" class="service-image"></a>
+          <a href="gameular.html"><img src="asset/gambar/ularpfp.png" alt="Service Image" class="service-image"></a>
           <!-- <div class="service-info">
             <i class="bx bx-code"></i>
             <h4>Mahasiswa Unpam</h4>
