--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         <p>Saya memiliki beberapa keinginan yang ingin dicapai yaitu sebagai Web Developer, Data Analyst, App Developer</p>
 
           <div class="social-icons">
-            <a href="#">
+            <a href="https://github.com/MaulanaSandyy">
               <i class="bx bxl-github"></i>
             </a>
             <a href="#">
               <i class="bx bxl-linkedin-square"></i>
             </a>
-            <a href="#">
+            <a href="https://www.instagram.com/mmsans_ndyy/">
               <i class="bx bxl-instagram-alt"></i>
             </a>
             <a href="#">
