--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           </div> -->
         </div>
         <div class="service-box">
-          <a href="chart.html"><img src="asset/gambar/gambarchart" alt="Service Image" class="service-image"></a>
+          <a href="chart.html"><img src="asset/gambar/gambarchart.png" alt="Service Image" class="service-image"></a>
           <!-- <div class="service-info">
             <i class="bx bx-code"></i>
             <h4>Mahasiswa Unpam</h4>
