--- a/index.html
+++ b/index.html
@@ -128,10 +128,9 @@
           <a href="dashmin.html"><img src="asset/gambar/showdash.png" alt="Service Image" class="service-image"></a>
         </div>
 
-        <div class="service-box Projek"></div>
+        <div class="service-box Projek">
           <a href="sistemkaryawan.html"><img src="asset/gambar/sistemmanajemenkaryawan.png" alt="Service Image" class="service-image"></a>
         </div>
-      </div>
 
         <div class="service-box Projek">
           <a href="kalk.html"><img src="asset/gambar/showkalk.png" alt="Service Image" class="service-image"></a>
